# dap-firmware

./: .gitignore  CMakeLists.txt  README.md  sim_main.c
src/: main.c
src/audio/: audio_engine.c  audio_engine.h  file_scanner.c  file_scanner.h  metadata.c  metadata.h
src/hal/sdl2/: hal_sdl2.c  hal_sdl2.h
src/ui/: font.c  font.h
src/ui/screens/: screen_library.c  screen_library.h  screen_now_playing.c  screen_now_playing.h
src/ui/themes/: theme.h  theme_dark.c  theme_ipod.c  theme_registry.c  theme_warm.c
